Fixed button component alignment

--- a/node-app/src/views/core/components/content/button/style.scss
+++ b/node-app/src/views/core/components/content/button/style.scss
@@ -1,4 +1,10 @@
 @import '../../../base/core';
+
+div.button .button-class {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
+}
+
 .primary-blue-button {
     .button-class {
         background-color: $medium-blue-color;
